.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:59:30 **** Rebuild of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\helloworld.o" "..\\src\\helloworld.cpp" 
g++ -o fractal.exe "src\\helloworld.o" 
C:/TDM-GCC-64/bin/../lib/gcc/x86_64-w64-mingw32/10.3.0/../../../../x86_64-w64-mingw32/bin/ld.exe: C:/TDM-GCC-64/bin/../lib/gcc/x86_64-w64-mingw32/10.3.0/../../../../x86_64-w64-mingw32/lib/../lib/libmingw32.a(lib64_libmingw32_a-crt0_c.o): in function `main':
C:/crossdev/src/mingw-w64-v8-git/mingw-w64-crt/crt/crt0_c.c:18: undefined reference to `WinMain'
collect2.exe: error: ld returned 1 exit status
20:01:02 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\helloworld.o" "..\\src\\helloworld.cpp" 
g++ -o fractal.exe "src\\helloworld.o" 
Info: Nothing to build for fractal
Info: Nothing to build for fractal
Info: Nothing to build for fractal
20:09:34 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\helloworld.o" "..\\src\\helloworld.cpp" 
g++ -o fractal.exe "src\\helloworld.o" 
Info: Nothing to build for fractal
20:29:46 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.cpp" 
g++ -o fractal.exe "src\\main.o" 
20:29:59 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.cpp" 
g++ -o fractal.exe "src\\main.o" 
20:36:45 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Bitmap.o" "..\\src\\Bitmap.cpp" 
g++ -o fractal.exe "src\\Bitmap.o" "src\\main.o" 
20:44:11 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Bitmap.o" "..\\src\\Bitmap.cpp" 
In file included from ..\src\Bitmap.cpp:8:
..\src\Bitmap.h:17:2: error: 'unique_ptr' does not name a type
   17 |  unique_ptr<uint8_t[]> m_pPixel{nullptr};
      |  ^~~~~~~~~~
..\src\Bitmap.cpp: In constructor 'test::Bitmap::Bitmap(int, int)':
..\src\Bitmap.cpp:12:74: error: class 'test::Bitmap' does not have any field named 'm_pPixels'
   12 | Bitmap::Bitmap(int width, int height): m_width(width), m_height(height), m_pPixels(new uint8_t[width*height*3]){
      |                                                                          ^~~~~~~~~
20:46:49 **** Incremental Build of configuration Debug for project fractal ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Bitmap.o" "..\\src\\Bitmap.cpp" 
In file included from ..\src\Bitmap.cpp:8:
..\src\Bitmap.h:15:2: error: 'unique_ptr' does not name a type
   15 |  unique_ptr<uint8_t[]> m_pPixel{nullptr};
      |  ^~~~~~~~~~
..\src\Bitmap.cpp: In constructor 'test::Bitmap::Bitmap(int, int)':
..\src\Bitmap.cpp:12:74: error: class 'test::Bitmap' does not have any field named 'm_pPixels'
   12 | Bitmap::Bitmap(int width, int height): m_width(width), m_height(height), m_pPixels(new uint8_t[width*height*3]){
      |                                                                          ^~~~~~~~~
